// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cars with "fields" parameter (name & manufacturer only) 1`] = `
Object {
  "count": 20,
  "data": Array [
    Object {
      "id": 20,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 LM",
    },
    Object {
      "id": 19,
      "manufacturer": "Ferrari",
      "name": "Ferrari 275",
    },
    Object {
      "id": 18,
      "manufacturer": "Ferrari",
      "name": "Ferrari 488",
    },
    Object {
      "id": 17,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Lusso",
    },
    Object {
      "id": 16,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GTO",
    },
    Object {
      "id": 15,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT 2+2",
    },
    Object {
      "id": 14,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Berlinetta SWB",
    },
    Object {
      "id": 13,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Coupé",
    },
    Object {
      "id": 12,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 MM",
    },
    Object {
      "id": 11,
      "manufacturer": "Ferrari",
      "name": "Ferrari 212 Inter",
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;

exports[`Cars with "page" parameter set to 2 1`] = `
Object {
  "count": 20,
  "data": Array [
    Object {
      "id": 10,
      "manufacturer": "Porsche",
      "name": "Porsche Macan",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 2014,
    },
    Object {
      "id": 9,
      "manufacturer": "Porsche",
      "name": "Porsche 924",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1976,
    },
    Object {
      "id": 8,
      "manufacturer": "Porsche",
      "name": "Porsche 917",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1969,
    },
    Object {
      "id": 7,
      "manufacturer": "Porsche",
      "name": "Porsche 914",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1969,
    },
    Object {
      "id": 6,
      "manufacturer": "Porsche",
      "name": "Porsche 908",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1968,
    },
    Object {
      "id": 5,
      "manufacturer": "Porsche",
      "name": "Porsche 906",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1966,
    },
    Object {
      "id": 4,
      "manufacturer": "Porsche",
      "name": "Porsche 904",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "id": 3,
      "manufacturer": "Porsche",
      "name": "Porsche 911",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1963,
    },
    Object {
      "id": 2,
      "manufacturer": "Porsche",
      "name": "Porsche 550",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": 2,
        "type": "ref",
      },
      "year": 1953,
    },
    Object {
      "id": 1,
      "manufacturer": "Porsche",
      "name": "Porsche 356",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": 1,
        "type": "ref",
      },
      "year": 1948,
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 2,
  },
}
`;

exports[`Cars with a "filters" and "contains" parameter 1`] = `
Object {
  "count": 1,
  "data": Array [
    Object {
      "id": 11,
      "manufacturer": "Ferrari",
      "name": "Ferrari 212 Inter",
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "filters" and NOT "contains" parameter 1`] = `
Object {
  "count": 2,
  "data": Array [
    Object {
      "id": 20,
      "name": "Ferrari 250 LM",
    },
    Object {
      "id": 12,
      "name": "Ferrari 250 MM",
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "filters" parameter 1`] = `
Object {
  "count": 1,
  "data": Array [
    Object {
      "id": 18,
      "name": "Ferrari 488",
      "year": 1969,
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "order" parameter 1`] = `
Object {
  "count": 10,
  "data": Array [
    Object {
      "id": 11,
      "name": "Ferrari 212 Inter",
    },
    Object {
      "id": 15,
      "name": "Ferrari 250 GT 2+2",
    },
    Object {
      "id": 14,
      "name": "Ferrari 250 GT Berlinetta SWB",
    },
    Object {
      "id": 13,
      "name": "Ferrari 250 GT Coupé",
    },
    Object {
      "id": 17,
      "name": "Ferrari 250 GT Lusso",
    },
    Object {
      "id": 16,
      "name": "Ferrari 250 GTO",
    },
    Object {
      "id": 20,
      "name": "Ferrari 250 LM",
    },
    Object {
      "id": 12,
      "name": "Ferrari 250 MM",
    },
    Object {
      "id": 19,
      "name": "Ferrari 275",
    },
    Object {
      "id": 18,
      "name": "Ferrari 488",
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "search" parameter 1`] = `
Object {
  "count": 10,
  "data": Array [
    Object {
      "id": 20,
      "name": "Ferrari 250 LM",
    },
    Object {
      "id": 19,
      "name": "Ferrari 275",
    },
    Object {
      "id": 18,
      "name": "Ferrari 488",
    },
    Object {
      "id": 17,
      "name": "Ferrari 250 GT Lusso",
    },
    Object {
      "id": 16,
      "name": "Ferrari 250 GTO",
    },
    Object {
      "id": 15,
      "name": "Ferrari 250 GT 2+2",
    },
    Object {
      "id": 14,
      "name": "Ferrari 250 GT Berlinetta SWB",
    },
    Object {
      "id": 13,
      "name": "Ferrari 250 GT Coupé",
    },
    Object {
      "id": 12,
      "name": "Ferrari 250 MM",
    },
    Object {
      "id": 11,
      "name": "Ferrari 212 Inter",
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "search" parameter in all fields 1`] = `
Object {
  "count": 10,
  "data": Array [
    Object {
      "id": 20,
      "name": "Ferrari 250 LM",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 19,
      "name": "Ferrari 275",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 18,
      "name": "Ferrari 488",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 17,
      "name": "Ferrari 250 GT Lusso",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1",
        "type": "ref",
      },
    },
    Object {
      "id": 16,
      "name": "Ferrari 250 GTO",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 15,
      "name": "Ferrari 250 GT 2+2",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1",
        "type": "ref",
      },
    },
    Object {
      "id": 14,
      "name": "Ferrari 250 GT Berlinetta SWB",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 13,
      "name": "Ferrari 250 GT Coupé",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1",
        "type": "ref",
      },
    },
    Object {
      "id": 12,
      "name": "Ferrari 250 MM",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2",
        "type": "ref",
      },
    },
    Object {
      "id": 11,
      "name": "Ferrari 212 Inter",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1",
        "type": "ref",
      },
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with a "segment" parameter 1`] = `
Object {
  "count": 5,
  "data": Array [
    Object {
      "id": 17,
      "name": "Ferrari 250 GT Lusso",
      "year": 1962,
    },
    Object {
      "id": 16,
      "name": "Ferrari 250 GTO",
      "year": 1962,
    },
    Object {
      "id": 15,
      "name": "Ferrari 250 GT 2+2",
      "year": 1960,
    },
    Object {
      "id": 14,
      "name": "Ferrari 250 GT Berlinetta SWB",
      "year": 1959,
    },
    Object {
      "id": 13,
      "name": "Ferrari 250 GT Coupé",
      "year": 1954,
    },
  ],
  "pagination": Object {
    "count": 1,
    "current": 1,
  },
}
`;

exports[`Cars with refFields params 1`] = `
Object {
  "count": 20,
  "data": Array [
    Object {
      "id": 20,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 LM",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "id": 19,
      "manufacturer": "Ferrari",
      "name": "Ferrari 275",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1964,
    },
    Object {
      "id": 18,
      "manufacturer": "Ferrari",
      "name": "Ferrari 488",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1969,
    },
    Object {
      "id": 17,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Lusso",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "id": 16,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GTO",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1962,
    },
    Object {
      "id": 15,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT 2+2",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1960,
    },
    Object {
      "id": 14,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Berlinetta SWB",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1959,
    },
    Object {
      "id": 13,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 GT Coupé",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1954,
    },
    Object {
      "id": 12,
      "manufacturer": "Ferrari",
      "name": "Ferrari 250 MM",
      "type": "test",
      "userId": Object {
        "id": 2,
        "label": "Firstname 2 Lastname 2 ",
        "type": "ref",
      },
      "year": 1952,
    },
    Object {
      "id": 11,
      "manufacturer": "Ferrari",
      "name": "Ferrari 212 Inter",
      "type": "test",
      "userId": Object {
        "id": 1,
        "label": "Firstname 1 Lastname 1",
        "type": "ref",
      },
      "year": 1951,
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;

exports[`Users simple request 1`] = `
Object {
  "count": 16,
  "data": Array [
    Object {
      "birthdate": "2020-12-31T23:00:00.000Z",
      "firstname": "Firstname 16",
      "id": 16,
      "lastname": "Lastname 16",
      "rating": 5,
      "signup_date": "2021-01-04T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-12-31T23:00:00.000Z",
      "firstname": "Firstname 15",
      "id": 15,
      "lastname": "Lastname 15",
      "rating": 5,
      "signup_date": "2021-01-03T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-12-31T23:00:00.000Z",
      "firstname": "Firstname 14",
      "id": 14,
      "lastname": "Lastname 14",
      "rating": 5,
      "signup_date": "2021-01-02T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-12-31T23:00:00.000Z",
      "firstname": "Firstname 13",
      "id": 13,
      "lastname": "Lastname 13",
      "rating": 5,
      "signup_date": "2021-01-01T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 12",
      "id": 12,
      "lastname": "Lastname 12",
      "rating": 5,
      "signup_date": "2021-01-01T00:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 11",
      "id": 11,
      "lastname": "Lastname 11",
      "rating": 5,
      "signup_date": "2020-12-30T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 10",
      "id": 10,
      "lastname": "Lastname 10",
      "rating": 5,
      "signup_date": "2020-12-29T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 9",
      "id": 9,
      "lastname": "Lastname 9",
      "rating": 5,
      "signup_date": "2020-12-28T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 8",
      "id": 8,
      "lastname": "Lastname 8",
      "rating": 5,
      "signup_date": "2020-12-27T23:00:00.000Z",
      "type": "test",
    },
    Object {
      "birthdate": "2020-04-01T22:00:00.000Z",
      "firstname": "Firstname 7",
      "id": 7,
      "lastname": "Lastname 7",
      "rating": 5,
      "signup_date": "2020-12-26T23:00:00.000Z",
      "type": "test",
    },
  ],
  "pagination": Object {
    "count": 2,
    "current": 1,
  },
}
`;
